*) Fixed bugs in io_arepo.c and sever.c/client.c related to input blocks with no particles (thanks to Alex Ji for catching).
*) Fixed bug wherein setting EXACT_LL_CALC could cause an infinite loop.  (Thanks to Manodeep Sinha for catching).
*) Added experimental capability to dump backtraces on network errors.  (Uncomment BACKTRACE_NETWORK_ERRORS in inet/socket.h to enable).

v0.99.9-RC3 (5/13/14):
*) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
*) Major fix to shape calculations within R_500c: previous versions were effectively not iterating the shape calculation.
*) Fix to calculation of T/|U|.  Previous versions incorrectly reported 0.5T/|U|.  The Peebles spin calculation is also affected by this error (in calculating |U|).  To correct for this in previous versions, multiply the previous Peebles spin parameter by sqrt(1-T/|U|)/sqrt(2-T/|U|), where T/|U| is the correct value of T/|U| (i.e., twice the value in the T/|U| column).  Thanks to Max Gronke for finding this error.
*) Additional experimental pseudo-evolution mass calculations.
*) Improved simulation data load distribution to reduce network transmissions.
*) Added EXACT_LL_CALC option for more deterministic (but slower) halo property calculation.  Set to 1 to enable.
*) Added HDF5 support for GADGET and AREPO (use FILE_FORMAT=AREPO for both), thanks to Dylan Nelson.
*) Make finish_bgc2 auto-load the box size from BGC2 files (thanks to Manodeep Sinha for catching).
*) Additional field in binary output header to indicate non-compatible binary versions.
*) Experimental binary catalog format for use with future versions of Consistent Trees.


v0.99.9-RC2 (9/27/13):
*) Major fix to shape calculations: previous versions had biased iterative calculations of the shape major axis.  (Thanks to Doug Hellinger for finding!).  Shape calculations are now weighted according to the Allgood et al. approach (1/r^2).