@@ -3,6 +3,7 @@ v0.99.9-RC4:
 *) Fixed bugs in io_arepo.c and sever.c/client.c related to input blocks with no particles (thanks to Alex Ji for catching).
 *) Fixed bug wherein setting EXACT_LL_CALC could cause an infinite loop.  (Thanks to Manodeep Sinha for catching).
 *) Added experimental capability to dump backtraces on network errors.  (Uncomment BACKTRACE_NETWORK_ERRORS in inet/socket.h to enable).
+*) Increased retry attempts for network connection failures.  (Thanks to Julian Onions for finding the problem, as well as contributing the code and solution).
 
 v0.99.9-RC3 (5/13/14):
 *) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
